...
            }
            .navigationBarItems(
                trailing: HStack {
                    Button {
                        viewStore.send(.settingsView(isNavigate: true))
                    } label: {
                        Image(systemName: "circle.hexagongrid.circle").imageScale(.large)
                    }
                }
            )
            .onAppear {
                viewStore.send(.onApper)
            }
...
