...
        }
        .tabViewStyle(PageTabViewStyle())
        
        Button {
          viewStore.send(.selectedPageButtonTapped)
        } label: {
          Text("Continue").font(.title3)
            .foregroundColor(.white)
            .frame(height: 10, alignment: .center)
            .padding()
        }
        .background(Color.orange)
        .clipShape(Capsule())
...
